module2-solution/style.css
/********** Base styles **********/
* {
    box-sizing: border-box;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
  }
  h1 {
    margin-bottom: 15px;
    text-align: center;
    margin: 50;
  }
  h2{
    font-size:large;
    text-align: center;
  }
  
  p{
    border: 5px solid black;
    background-color: #747474;
    width: 100%;
    height: 150px;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: 5;
    padding-top: 32;
    padding-left: 5;
    font-family: Helvetica;
    color: rgb(0, 0, 0);
    overflow: hidden;
  }

  .cardtitle{
    position: relative;
    top: 48;
    padding-right: 50;
    padding-left: 50;
    float: right;
    border: 5px solid black;
    text-align: center;
  }

  .chicken{
    background-color: pink;
  }
  .beef{
    background-color: red;
  }
  .sushi{
    background-color: yellow;
  }

  
  /* Simple Responsive Framework. */
  .row {
    width: 100%;
    margin: 0;
  }
  
  /********** Large devices only **********/
  @media (min-width: 1200px) {
    .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
      float: left;
      padding-left: 10;
      padding-right: 10;
      margin-top: -10;
    }
    .col-lg-1 {
      width: 8.33%;
    }
    .col-lg-2 {
      width: 16.66%;
    }
    .col-lg-3 {
      width: 25%;
    }
    .col-lg-4 {
      width: 33.33%;
    }
    .col-lg-5 {
      width: 41.66%;
    }
    .col-lg-6 {
      width: 50%;
    }
    .col-lg-7 {
      width: 58.33%;
    }
    .col-lg-8 {
      width: 66.66%;
    }
    .col-lg-9 {
      width: 74.99%;
    }
    .col-lg-10 {
      width: 83.33%;
    }
    .col-lg-11 {
      width: 91.66%;
    }
    .col-lg-12 {
      width: 100%;
    }
  }
  
  /********** Medium devices only **********/
  @media (min-width: 992px) and (max-width: 1199px) {
    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
      float: left;
      padding-left: 10;
      padding-right: 10;
    }
    .col-md-1 {
      width: 8.33%;
    }
    .col-md-2 {
      width: 16.66%;
    }
    .col-md-3 {
      width: 25%;
    }
    .col-md-4 {
      width: 33.33%;
    }
    .col-md-5 {
      width: 41.66%;
    }
    .col-md-6 {
      width: 50%;
    }
    .col-md-7 {
      width: 58.33%;
    }
    .col-md-8 {
      width: 66.66%;
    }
    .col-md-9 {
      width: 74.99%;
    }
    .col-md-10 {
      width: 83.33%;
    }
    .col-md-11 {
      width: 91.66%;
    }
    .col-md-12 {
      width: 100%;
    }
  }

    /********** Small devices only **********/
    @media (max-width: 991px) {
        .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
            float: left;
        }
        .col-sm-1 {
            width: 8.33%;
        }
        .col-sm-2 {
            width: 16.66%;
        }
        .col-sm-3 {
            width: 25%;
        }
        .col-sm-4 {
            width: 33.33%;
        }
        .col-sm-5 {
            width: 41.66%;
        }
        .col-sm-6 {
            width: 50%;
        }
        .col-sm-7 {
            width: 58.33%;
        }
        .col-sm-8 {
            width: 66.66%;
        }
        .col-sm-9 {
            width: 74.99%;
        }
        .col-sm-10 {
            width: 83.33%;
        }
        .col-sm-11 {
            width: 91.66%;
        }
        .col-sm-12 {
            width: 100%;
        }
    }

